tests/machine/x/c/min_max_builtin.error
exit status 1
/workspace/mochi/tests/machine/x/c/min_max_builtin.c: In function ‘_mochi_main’:
/workspace/mochi/tests/machine/x/c/min_max_builtin.c:28:18: error: subscripted value is neither array nor pointer nor vector
   28 |   int tmp2 = tmp1[0];
      |                  ^
/workspace/mochi/tests/machine/x/c/min_max_builtin.c:30:13: error: subscripted value is neither array nor pointer nor vector
   30 |     if (tmp1[i3] < tmp2)
      |             ^
/workspace/mochi/tests/machine/x/c/min_max_builtin.c:31:18: error: subscripted value is neither array nor pointer nor vector
   31 |       tmp2 = tmp1[i3];
      |                  ^
/workspace/mochi/tests/machine/x/c/min_max_builtin.c:37:18: error: subscripted value is neither array nor pointer nor vector
   37 |   int tmp5 = tmp4[0];
      |                  ^
/workspace/mochi/tests/machine/x/c/min_max_builtin.c:39:13: error: subscripted value is neither array nor pointer nor vector
   39 |     if (tmp4[i6] < tmp5)
      |             ^
/workspace/mochi/tests/machine/x/c/min_max_builtin.c:40:18: error: subscripted value is neither array nor pointer nor vector
   40 |       tmp5 = tmp4[i6];
      |                  ^
/workspace/mochi/tests/machine/x/c/min_max_builtin.c:47:18: error: subscripted value is neither array nor pointer nor vector
   47 |   int tmp8 = tmp7[0];
      |                  ^
/workspace/mochi/tests/machine/x/c/min_max_builtin.c:49:13: error: subscripted value is neither array nor pointer nor vector
   49 |     if (tmp7[i9] > tmp8)
      |             ^
/workspace/mochi/tests/machine/x/c/min_max_builtin.c:50:18: error: subscripted value is neither array nor pointer nor vector
   50 |       tmp8 = tmp7[i9];
      |                  ^
/workspace/mochi/tests/machine/x/c/min_max_builtin.c:56:20: error: subscripted value is neither array nor pointer nor vector
   56 |   int tmp11 = tmp10[0];
      |                    ^
/workspace/mochi/tests/machine/x/c/min_max_builtin.c:58:14: error: subscripted value is neither array nor pointer nor vector
   58 |     if (tmp10[i12] > tmp11)
      |              ^
/workspace/mochi/tests/machine/x/c/min_max_builtin.c:59:20: error: subscripted value is neither array nor pointer nor vector
   59 |       tmp11 = tmp10[i12];
      |                    ^
