tests/machine/x/c/min_max_builtin.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:52Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
int main() {
  list_int nums = list_int_create(3);
  nums.data[0] = 3;
  nums.data[1] = 1;
  nums.data[2] = 4;
  list_int tmp1 = list_int_create(3);
  tmp1.data[0] = 3;
  tmp1.data[1] = 1;
  tmp1.data[2] = 4;
  int tmp2 = tmp1[0];
  for (int i3 = 1; i3 < 3; i3++) {
    if (tmp1[i3] < tmp2)
      tmp2 = tmp1[i3];
  }
  list_int tmp4 = list_int_create(3);
  tmp4.data[0] = 3;
  tmp4.data[1] = 1;
  tmp4.data[2] = 4;
  int tmp5 = tmp4[0];
  for (int i6 = 1; i6 < 3; i6++) {
    if (tmp4[i6] < tmp5)
      tmp5 = tmp4[i6];
  }
  printf("%d\n", tmp5);
  list_int tmp7 = list_int_create(3);
  tmp7.data[0] = 3;
  tmp7.data[1] = 1;
  tmp7.data[2] = 4;
  int tmp8 = tmp7[0];
  for (int i9 = 1; i9 < 3; i9++) {
    if (tmp7[i9] > tmp8)
      tmp8 = tmp7[i9];
  }
  list_int tmp10 = list_int_create(3);
  tmp10.data[0] = 3;
  tmp10.data[1] = 1;
  tmp10.data[2] = 4;
  int tmp11 = tmp10[0];
  for (int i12 = 1; i12 < 3; i12++) {
    if (tmp10[i12] > tmp11)
      tmp11 = tmp10[i12];
  }
  printf("%d\n", tmp11);
  return 0;
}
